<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codeclan.topmovieslist.AddMovieActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/editRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="56dp"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="Rank"
        app:layout_constraintLeft_toRightOf="@+id/rankLabel"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.808" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_movie_text"
        android:textSize="30sp"
        tools:text="Add a movie"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/rankLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rank"
        tools:text="Rank"
        android:layout_marginTop="94dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="67dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        tools:text="Title"
        android:layout_marginTop="89dp"
        app:layout_constraintTop_toBottomOf="@+id/rankLabel"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/editTitle"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.692" />

    <TextView
        android:id="@+id/yearlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        tools:layout_editor_absoluteX="71dp"
        android:layout_marginTop="91dp"
        app:layout_constraintTop_toBottomOf="@+id/titleLabel" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:text="Title"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/editRank"
        android:layout_marginRight="63dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="63dp"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle"
        tools:text="Year"
        app:layout_constraintLeft_toRightOf="@+id/yearlabel"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/addMovieButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="addMovie"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editYear" />

</android.support.constraint.ConstraintLayout>
